# solana-idl-codegen

./: .cursorignore  .gitignore  .gitmodules  BENCHMARKING.md  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  DOCS_INDEX.md  INTEGRATION_TESTING.md  OFF_CHAIN_FEATURES.md  PERFORMANCE_ANALYSIS.md  POST_GENERATION_TESTS.md  QUICKSTART.md  README.md  TESTING_AND_PERFORMANCE_SUMMARY.md  TEST_COVERAGE.md  TEST_PERFORMANCE.md  example_counter.json  justfile
.claude/: settings.local.json
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
benches/: codegen_bench.rs
docs/: CODEGEN_FEATURES.md  CONSTITUTION_COMPLIANCE_REPORT.md  EVENT_WRAPPER_PATTERN.md  PERFORMANCE_REVIEW_SUMMARY.md  README.md  TESTING_SUMMARY.md  TEST_RESULTS.md  codegen-improvements.md  override-format.md
imported/pump_interface/: Cargo.toml
imported/pump_interface/src/: accounts.rs  errors.rs  events.rs  instructions.rs
overrides/: .gitkeep  README.md  raydium_amm.json  raydium_clmm.json
overrides/examples/: example_account_discriminators.json  example_complete.json  example_event_discriminators.json  example_instruction_discriminators.json
specs/001-idl-override/: data-model.md  plan.md  quickstart.md  research.md  review.md  spec.md  tasks.md
specs/001-idl-override/checklists/: requirements.md
specs/001-idl-override/contracts/: override-api.md
src/: codegen.rs  idl.rs  lib.rs  main.rs  override.rs
tests/: generated_code_test.rs  integration_tests.rs  override_tests.rs  performance_tests.rs  serialization_roundtrip_tests.rs
(+9 files in other folders)
