[package]
name = "solana-idl-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
bs58 = "0.5"
quote = "1.0"
proc-macro2 = "1.0"
heck = "0.5"
prettyplease = "0.2"
syn = { version = "2.0", features = ["full"] }
strsim = "0.11"

[dev-dependencies]
# These are used in the generated code
borsh = "1.5"
bytemuck = "1.14"
solana-program = "1.18"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[[bench]]
name = "codegen_bench"
harness = false
